Jdk_Springboot_Junit_Upgrade_Vulnerability_Fix